--- a/Makefile.e2e
+++ b/Makefile.e2e
@@ -59,6 +59,8 @@ define ginkgo_option
 --$(1)=$(shell echo '$(2)' | sed -E 's/^[[:space:]]+//' | sed -E 's/"[[:space:]]+"/" --$(1)="/g')
 endef
 
+TEST_BIN_ARGS = -kubeconfig $(KUBECONFIG) -num-nodes $(shell kubectl get node -o name | wc -l)
+
 .PHONY: e2e
 e2e: kube-ovn-conformance-e2e
 
@@ -82,14 +84,7 @@ k8s-conformance-e2e:
 	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all -v --timeout=1h \
 		$(call ginkgo_option,focus,$(K8S_CONFORMANCE_E2E_FOCUS)) \
 		$(call ginkgo_option,skip,$(K8S_CONFORMANCE_E2E_SKIP)) \
-		./test/e2e/k8s-network/k8s-network.test
-
-.PHONY: k8s-netpol-legacy-e2e
-k8s-netpol-legacy-e2e:
-	ginkgo build $(E2E_BUILD_FLAGS) ./test/e2e/k8s-network
-	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all -v --timeout=2h \
-		$(call ginkgo_option,focus,$(K8S_NETPOL_LEGACY_E2E_FOCUS)) \
-		./test/e2e/k8s-network/k8s-network.test
+		./test/e2e/k8s-network/k8s-network.test -- $(TEST_BIN_ARGS)
 
 .PHONY: k8s-netpol-e2e
 k8s-netpol-e2e:
@@ -97,7 +92,7 @@ k8s-netpol-e2e:
 	ginkgo --randomize-all -v --timeout=2h \
 		$(call ginkgo_option,focus,$(K8S_NETPOL_E2E_FOCUS)) \
 		$(call ginkgo_option,skip,$(K8S_NETPOL_E2E_SKIP)) \
-		./test/e2e/k8s-network/k8s-network.test
+		./test/e2e/k8s-network/k8s-network.test -- $(TEST_BIN_ARGS)
 
 .PHONY: cyclonus-netpol-e2e
 cyclonus-netpol-e2e:
@@ -120,7 +115,7 @@ kube-ovn-conformance-e2e:
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
 	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all -v --timeout=30m \
-		--focus=CNI:Kube-OVN ./test/e2e/kube-ovn/kube-ovn.test
+		--focus=CNI:Kube-OVN ./test/e2e/kube-ovn/kube-ovn.test -- $(TEST_BIN_ARGS)
 
 .PHONY: kube-ovn-ic-conformance-e2e
 kube-ovn-ic-conformance-e2e:
@@ -129,7 +124,7 @@ kube-ovn-ic-conformance-e2e:
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
 	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all -v \
-		--focus=CNI:Kube-OVN ./test/e2e/ovn-ic/ovn-ic.test
+		--focus=CNI:Kube-OVN ./test/e2e/ovn-ic/ovn-ic.test -- $(TEST_BIN_ARGS)
 
 .PHONY: kube-ovn-submariner-conformance-e2e
 kube-ovn-submariner-conformance-e2e:
@@ -144,7 +139,7 @@ kube-ovn-lb-svc-conformance-e2e:
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
 	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all -v \
-		--focus=CNI:Kube-OVN ./test/e2e/lb-svc/lb-svc.test
+		--focus=CNI:Kube-OVN ./test/e2e/lb-svc/lb-svc.test -- $(TEST_BIN_ARGS)
 
 .PHONY: vip-conformance-e2e
 vip-conformance-e2e:
@@ -162,7 +157,7 @@ iptables-vpc-nat-gw-conformance-e2e:
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
 	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all -v \
-		--focus=CNI:Kube-OVN ./test/e2e/iptables-vpc-nat-gw/iptables-vpc-nat-gw.test
+		--focus=CNI:Kube-OVN ./test/e2e/iptables-vpc-nat-gw/iptables-vpc-nat-gw.test -- $(TEST_BIN_ARGS)
 
 .PHONY: ovn-vpc-nat-gw-conformance-e2e
 ovn-vpc-nat-gw-conformance-e2e:
@@ -171,7 +166,7 @@ ovn-vpc-nat-gw-conformance-e2e:
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
 	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all -v \
-		--focus=CNI:Kube-OVN ./test/e2e/ovn-vpc-nat-gw/ovn-vpc-nat-gw.test
+		--focus=CNI:Kube-OVN ./test/e2e/ovn-vpc-nat-gw/ovn-vpc-nat-gw.test -- $(TEST_BIN_ARGS)
 
 .PHONY: kube-ovn-ha-e2e
 kube-ovn-ha-e2e:
@@ -180,7 +175,7 @@ kube-ovn-ha-e2e:
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
 	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all -v \
-		--focus=CNI:Kube-OVN ./test/e2e/ha/ha.test
+		--focus=CNI:Kube-OVN ./test/e2e/ha/ha.test -- $(TEST_BIN_ARGS)
 
 .PHONY: kube-ovn-security-e2e
 kube-ovn-security-e2e:
@@ -189,7 +184,7 @@ kube-ovn-security-e2e:
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
 	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all -v \
-		--focus=CNI:Kube-OVN ./test/e2e/security/security.test
+		--focus=CNI:Kube-OVN ./test/e2e/security/security.test -- $(TEST_BIN_ARGS)
 
 .PHONY: kube-ovn-kubevirt-e2e
 kube-ovn-kubevirt-e2e:
@@ -198,7 +193,7 @@ kube-ovn-kubevirt-e2e:
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
 	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all -v \
-		--focus=CNI:Kube-OVN ./test/e2e/kubevirt/kubevirt.test
+		--focus=CNI:Kube-OVN ./test/e2e/kubevirt/kubevirt.test -- $(TEST_BIN_ARGS)
 
 .PHONY: kube-ovn-webhook-e2e
 kube-ovn-webhook-e2e:
@@ -207,7 +202,7 @@ kube-ovn-webhook-e2e:
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
 	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all -v \
-		--focus=CNI:Kube-OVN ./test/e2e/webhook/webhook.test
+		--focus=CNI:Kube-OVN ./test/e2e/webhook/webhook.test -- $(TEST_BIN_ARGS)
 
 .PHONY: kubectl-ko-log
 kubectl-ko-log:
