--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -97,6 +97,7 @@ performance:
   RPMS: "openvswitch-kmod"
   GC_INTERVAL: 360
   INSPECT_INTERVAL: 20
+  OVS_VSCTL_RATE: 100
 
 debug:
   ENABLE_MIRROR: false
