--- a/charts/templates/kube-ovn-crd.yaml
+++ b/charts/templates/kube-ovn-crd.yaml
@@ -1734,6 +1734,8 @@ spec:
                   type: boolean
                 ipv6RAConfigs:
                   type: string
+                allowSameSubnetTraffic:
+                  type: string
                 acls:
                   type: array
                   items:
