Allow same subnet traffic
Signed-off-by: yuanliu <yuanliu_yewu@cmss.chinamobile.com>

--- a/charts/templates/kube-ovn-crd.yaml
+++ b/charts/templates/kube-ovn-crd.yaml
@@ -1734,6 +1734,8 @@ spec:
                   type: boolean
                 ipv6RAConfigs:
                   type: string
+                allowEWTraffic:
+                  type: boolean
                 acls:
                   type: array
                   items:
