--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -2045,6 +2045,8 @@ spec:
                   type: boolean
                 ipv6RAConfigs:
                   type: string
+                allowEWTraffic:
+                  type: boolean
                 acls:
                   type: array
                   items:
