--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -1293,8 +1293,6 @@ spec:
                   type: string
                 v4Ip:
                   type: string
-                macAddress:
-                  type: string
                 vpc:
                   type: string
                 conditions:
@@ -1322,6 +1320,10 @@ spec:
                 ipType:
                   type: string
                 ipName:
+                  type: string
+                vpc:
+                  type: string
+                v4Ip:
                   type: string
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -1351,8 +1353,8 @@ spec:
       - jsonPath: .status.v4Eip
         name: V4Eip
         type: string
-      - jsonPath: .status.v4ipCidr
-        name: V4Ip
+      - jsonPath: .status.v4IpCidr
+        name: V4IpCidr
         type: string
       - jsonPath: .status.ready
         name: Ready
@@ -1368,7 +1370,7 @@ spec:
                   type: boolean
                 v4Eip:
                   type: string
-                v4ipCidr:
+                v4IpCidr:
                   type: string
                 vpc:
                   type: string
@@ -1398,6 +1400,10 @@ spec:
                   type: string
                 ipName:
                   type: string
+                vpc:
+                  type: string
+                v4IpCidr:
+                  type: string
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -1420,6 +1426,9 @@ spec:
       subresources:
         status: {}
       additionalPrinterColumns:
+        - jsonPath: .status.vpc
+          name: Vpc
+          type: string
         - jsonPath: .spec.ovnEip
           name: Eip
           type: string
@@ -1457,8 +1466,6 @@ spec:
                   type: string
                 v4Ip:
                   type: string
-                macAddress:
-                  type: string
                 vpc:
                   type: string
                 externalPort:
@@ -1500,6 +1507,10 @@ spec:
                 internalPort:
                   type: string
                 protocol:
+                  type: string
+                vpc:
+                  type: string
+                v4Ip:
                   type: string
 ---
 apiVersion: apiextensions.k8s.io/v1
