--- a/.github/workflows/build-kube-ovn-base-dpdk.yaml
+++ b/.github/workflows/build-kube-ovn-base-dpdk.yaml
@@ -1,8 +1,17 @@
 name: Build Base DPDK
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+  schedule:
+    - cron: "20 19 * * *"
 
 jobs:
   build-amd64:
+    strategy:
+      fail-fast: false
+      matrix:
+        branch:
+          - master
+          - release-1.12
     name: Build AMD64
     runs-on: ubuntu-22.04
     steps:
@@ -21,6 +30,12 @@ jobs:
           path: image-amd64-dpdk.tar
 
   push:
+    strategy:
+      fail-fast: false
+      matrix:
+        branch:
+          - master
+          - release-1.12
     needs:
       - build-amd64
     name: push
